--- a/BroadcastTest2/app/src/main/res/layout/activity_main.xml
+++ b/BroadcastTest2/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chenye.app.MainActivity">
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send Broadcast"/>
+        android:text="Send Broadcast2"/>
 
 </LinearLayout>
