--- a/BroadcastBestPractice2/app/src/main/res/layout/login.xml
+++ b/BroadcastBestPractice2/app/src/main/res/layout/login.xml
@@ -20,7 +20,15 @@
         <EditText
             android:id="@+id/password"
             android:layout_height="wrap_content"
-            android:hint="Input your password"/>
+            android:inputType="textPassword"/>
+    </TableRow>
+    <TableRow>
+        <CheckBox
+            android:id="@+id/remember_pass"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:text="Remember password"/>
     </TableRow>
 
     <TableRow>
